test/errors/type/list/remove.yasl
mt.lookup([], .remove)(1, true)
